Added a final target name.

--- a/tomcat-extras/pom.xml
+++ b/tomcat-extras/pom.xml
@@ -39,4 +39,7 @@
 			<version>6.0.35</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<finalName>tomcat-extras</finalName>
+	</build>
 </project>
